--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 
-body {
-    background-color: #4E7AFF;
+body{
+    background-color: #6dabed;
 }
 
-@media screen and (min-width: 450px) {
 
     /* HEADER */
     header {
@@ -35,124 +34,82 @@ body {
 
     }
 
-/* FIN HEADER  */
+    /* FIN HEADER  */
     #titre {
         color: white;
-        margin-top: 50px;
     }
 
-
-    #lesSeries {
-        display: flex;
-
-    }
-    .serie {
-        flex: auto;
-        border-style: groove;
+    /* Flex liste*/
+    img {
         width: 250px;
         height: 250px;
-        margin: 10px;
-        padding-left: 10px;
-    }
-    .serie a {
-        position: relative;
-        text-decoration: none;
-        color: #FFFFFF;
-    }
-    form{
-        color: white;
-        display: inline-block;
-        width: 100%;
-        text-align: center;
-    }
-    #lesSeriesFav{
-
-        display: flex;
-    }
-
-    #seriefav{
-        flex: auto;
-        border-style: groove;
-        width: 250px;
-        height: 250px;
-        margin-top: 10px;
-        margin-left: 10px;
-
-    }
-    #serie:hover #titre_fav{
         display: block;
     }
-    #titre_fav{
-        display: none;
+
+    .serie {
+        margin-right: 15px;
+
+    }
+
+    .infoSerie {
+        display: block;
+        color: black;
         background-color: white;
-        margin-bottom: 10px;
-
-    }
-}
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 450px) {
-
-    body{
-        background-color: red;
-    }
-
-    /* HEADER */
-    header {
-        display: flex;
-    }
-
-    #logo {
-        height: 10%;
-        width: 10%;
-    }
-
-    nav {
+        position: relative;
         text-align: center;
-        flex: auto;
-    }
-
-    nav ul {
-        display: inline-block;
-        margin: 0;
-    }
-
-    nav li {
-        display: inline-block;
-        color: white;
-    }
-
-    nav a:visited {
-        color: white;
-
+        bottom: 45px;
     }
 
 
-    #titre {
-        color: white;
-        margin-top: 50px;
-    }
-
-
-    #lesSeries {
+    #container {
         display: flex;
+        flex-wrap: wrap;
+    }
+
+    /* Fin Flex list*/
+    /* Flex Fav*/
+    .imgSerie {
+        width: 500px;
+        height: 200px;
+        display: block;
+
+        margin-bottom: 10px;
+    }
+
+
+    .infoSerieFav {
+        display: none;
+        color: black;
+        font-family: Arial;
+        background-color: white;
+        position: relative;
+        bottom: 65px;
 
     }
 
-    #serie {
-        flex: auto;
-        border-style: groove;
-        width: 35px;
-        margin-top: 10px;
-        margin-left: 10px;
+    .serieFav:hover .infoSerieFav {
+        display: block;
     }
 
+    p {
+        text-shadow: 1px 1px 1px black;
+    }
+
+    #containerFav {
+        display: flex;
+        flex-wrap: wrap;
+        width: 500px;
+
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    /*Fin Flex fav*/
+
+
+form{
+    color: white;
+    margin: auto;
+    margin-top: 15px;
 }
 
